--- a/homework/lilit_galstyan/html/simple_login_page/index1.html
+++ b/homework/lilit_galstyan/html/simple_login_page/index1.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<img src="image.PNG" alt="image" style="display: block; margin-left: auto; margin-right: auto; " > <br> 
+		<img src="resources/image.PNG" alt="image" style="display: block; margin-left: auto; margin-right: auto; " > <br> 
                 <form>
 			<label for"username"><b>Username</b></label><br>
 	      		<input type="text" id="username" name="username" placeholder="Enter Username" style="width: 600px; height: 30px;" > <br>
