Changed Homwork2-html doc

--- a/homework/P.Srbuhi/HTML/Homwork2-html.html
+++ b/homework/P.Srbuhi/HTML/Homwork2-html.html
@@ -35,8 +35,8 @@
 			<label for="phone" style="">Mobile phone</label><br>
 			<input type="phone" name="phone" style="width: 345px"><br><br>
 			<label for="address">Your current email adress</label><br>
-			<input type="text" name="address" style="width: 345px"><br>
-			<input type="submit" name="submit" value="Submit" style=": right; background-color: #394CB1 ">
+			<input type="text" name="address" style="width: 345px"><br><br>
+			<input type="submit" name="submit" value="Submit" style=": right; background-color: #394CB1; height: 30px; ">
 		</div>
 		
 	</form>
