--- a/Mariam.html
+++ b/Mariam.html
@@ -75,7 +75,7 @@ input[type=submit]:hover {
   <div class="centered">
     <h2 style="color:red">Add Gmail to your Google Account</h2>
 
-      <p>By completing this form, you're uograding Gmail, email from Google, Gmail works o> any,
+      <p>By completing this form, you're uograding Gmail, email from Google, Gmail works on  any,
         device, blocks spam and much more
         You'll able to sign in using your new Gmail adress, which will become the primary email
         adress associated with this account. We'll sent email updates, invitations, and other notifications on your Gmail
