Changes my homework

--- a/homework/tatev_martirosyan/html/task-1/index.html
+++ b/homework/tatev_martirosyan/html/task-1/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>My first page</title>
+    <meta charset="UTF-8">
+    <title>My first page</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-<div>
-<img src="1.png" style="margin-left:100px;">
-<form>
-<p><b>Username:</b></p>
-<p><input type="text" placeholder="Enter username" style="width:500px;"></p>
-<p><b>Password:</b></p>
-<p><input type="password" placeholder="Enter password" style="width:500px"></p>
-<p><button style="width:515px; height:40px; background-color:green; color:white;">Login</button></p>
-</form>
-
-</div>
-
+    <div class="reg_form">
+        <img src="resurse/1.png">
+        <form>
+            <p><b>Username</b></p>
+            <p><input type="text" placeholder="Enter username"></p>
+            <p><b>Password</b></p>
+            <p><input type="password" placeholder="Enter password"></p>
+            <p><button class="btn">Login</button></p>
+        </form>
+    </div>
 
 </body>
 </html>
