Created css files

--- a/homework/nare_mkrtchyan/html/task1/index.html
+++ b/homework/nare_mkrtchyan/html/task1/index.html
@@ -1,27 +1,25 @@
+<!doctype html>
 <html>
 
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width", initial=scale=1.0>
 <title>task1</title>
-<style>
-div {
-text-align: center;
-line-height: 30px;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="task1.css">
 </head>
 <body>
-<div>
+<div class="main">
 <img src="./logpic.png" alt="username"><br>
+
 <form>
-<label for=fname""><b>Username<b></label><br>
-<input type="text" id="fname" placeholder="Enter Username" style="width:600px; height:40px"><br>
-<label for="lname"><b>Password<b></label><br>
+<label for="fname"><b>Username<b></label><br>
+<input type="text" id="fname" placeholder="Enter Username"><br>
 <br>
-<input type="password" id="lname" placeholder="Enter Password" style="width:600px; height:40px">
+<label for="lname"><b>Password<b></label>
 <br>
-<input type="submit" value="Login" class="button" style="background-color:green; width:600px;height:40px">
+<input type="password" id="lname" placeholder="Enter Password"><br>
+<br>
+<input type="submit" value="Login" class="button">
 
 </form>
 </div>
