--- a/task1.html
+++ b/task1.html
@@ -1,21 +1,63 @@
+:<!DOCTYPE html>
+<html>
 <div class="main"> 
 <div> 
 <img src="1.png">
 </div>
+
+
+<style>
+input[type=text], select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 50%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+</style>
+<body>
+
+
+
 <div>
-<form>
-     <label for="fname">USERNAME:</label><br><br>
-  <input type="text" id="fname" name="fname" placeholder="username" style="width: 300px; height: 30px;"><br><br>
-  <label for="lname">PASSWORD:</label><br><br>
-  <input type="password" id="lname" name="lname" placeholder="password" style="width: 300px; height: 30px;"><br><br>
-  <input type="submit"   value="login" class="button" style="background-color:#008000; width: 600px; height: 30px;">
+  <form action="/action_page.php">
+    <label for="fname">USERNAME</label><br>
+    <input type="text" id="fname" name="firstname" placeholder="username"><br>
+
+    <label for="lname">PASSWORD</label><br>
+    <input type="text" id="lname" name="lastname" placeholder="password">
+
+   
+  
+    <input type="submit" value="Submit">
   </form>
-
-
-
 </div>
-
 
 </body>
 </html>
+
+
 
