--- a/task2.html
+++ b/task2.html
@@ -8,14 +8,44 @@ div.a {
   width: 450px;
   height: 400px;
   top: 50px;
-  border:2px solid #F5F5F5;
+  border:3px solid #F5F5F5;
   background:#F5F5F5;
 }
 </style>
 </head>
 <style>
+
     h1 { color: #FF0000; }
+
   </style>
+<style>
+
+p {font-family: Tahoma, Geneva, sans-serif
+  font-size:7px;}
+
+input[type=text], select {
+  width: 100%;
+  padding: 7px 5px;
+  margin: 0.1 px 1;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+
+
+input[type=text1], select {
+  width: 100%;
+  padding: 7px 5px;
+  margin: 1 px 1;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-sizing: border-box;  }
+
+
+
+
+</style>
 <body>
 
 <div>
@@ -27,16 +57,21 @@ div.a {
 
 <form>
      <label for="fname">Name</label><br><br>
-   <input type="text" id="fname" name="fname" placeholder="First name" style="width: 200px; height: 20px;"> 
-   <input type="text" id="fname" name="fname" placeholder="Last name"style="width: 200px; height: 20px;"><br><br>
+   <input type="text1" id="fname" name="fname" placeholder="First name" > 
+   <input type="text1" id="fname" name="fname" placeholder="Last name"><br><br>
    <label for="fname">Choose your email address</label><br><br>
    
-   <input type="text" id="fname" name="fname" placeholder="  @gmail.com" style="width: 400px; height: 20px;left:500px;"> <br><br>
-   <label for="fname">Mobile phone</label><br><br>
-   <input type="text" id="fname" name="fname" value=" +374" style="width: 400px; height: 20px;"> <br><br>
+   <input type="text" id="fname" name="fname" placeholder="@gmail.com" > <br><br>
+    <label for="mobile phnoe">Mobile phone</label><br>
+    <select id="internetional number" name="international number">
+      <option value="+374">+374 </option>
+      <option value="+39">+39 </option>
+      <option value="+82">+82 </option>
+    </select> <br><br>
    <label for="fname">Your current email adress</label><br><br>
-   <input type="text" id="fname" name="fname" value="email" style="width: 400px; height: 20px;"> <br><br>
-   <input type="submit" value="Submit"     class="button" style="background-color:#4B77BE; left:200px;     width: 100px; height: 30px;">
+   <input type="text" id="fname" name="fname" placeholder="email" > <br><br>
+   <input type="submit" value="Submit"  class="button"   style="background-color:#4B77BE; left:200px;     width: 100%; height: 30px;">
+ 
    </div>
 </body>
 </html>
