--- a/homework/lilit_galstyan/html_css/simple_login_page/html/index1.html
+++ b/homework/lilit_galstyan/html_css/simple_login_page/html/index1.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
+
 <html>
+
         <head>
                 <title> User </title>
-                <link rel="stylesheet" href="stl.css">
+                <link rel="stylesheet" href="../css/stl.css">
+		<meta charset="UTF-8">
+		<meta name="keywords" content="HTML,CSS">
         </head>
+
         <body>
-                <img src="image.PNG" alt="image" style="display: block; margin-left: auto; margin-right: auto; " > <br><div>
+                <img src="../resources/image.PNG" alt="image" id="image" > <br><div>
                 <form>
-                        <label for"username" id="u" ><b>Username</b></label><br>
-                        <input type="text" id="username" name="username" placeholder="Enter Username" style="width: 600px; height: 40px;" > <br>
-                        <label for"password" id="u"><b>Password</b></label><br>
-                        <input type="text" id="password" name="password" placeholder="Enter Password" style="width: 600px; height: 40px;" > <br><br>
-                        <input type="submit" value="Login" class="button" style="color: white; background-color: rgb(76,175,80); width: 610px; height: 40px;" > <br>
+                        <label for"username" id="data" ><b>Username</b></label><br>
+                        <input type="text" id="username" name="username" placeholder="Enter Username" > <br>
+                        <label for"password" id="data"><b>Password</b></label><br>
+                        <input type="text" id="password" name="password" placeholder="Enter Password" > <br>
+                        <input type="submit" value="Login" class="button"> <br>
                         </div>
                 </form>
         </body>
+
+
 </html>
+
