Made some corrections in html_firsttask folder

--- a/homework/gohar_abrahamyan/html_css/html_firsttask/Form1.html
+++ b/homework/gohar_abrahamyan/html_css/html_firsttask/Form1.html
@@ -8,19 +8,20 @@
 <body>
 	<div id="content">
 	<!--This is the profile registration form-->
-		<img src="resources/task1.png" alt=""/>		
-		<form method="GET">
-			<label for="name" >
-				Username
-			</label>
-			<input id="name"  type="text" placeholder="&ensp;Enter Username" />
-			<label for="password" >
-				Email Address
-			</label>
-			<input id="password"  type="password" placeholder="&ensp;Enter Password"/>
-			<input type="submit" value="Login"/>
-		</form>	
+		<img src="resources/task1.png" alt="profile_picture"/>
+		<div class="registrform">
+			<form method="GET">
+				<label for="name" >
+					Username
+				</label>
+				<input id="name"  type="text" placeholder="Enter Username" />
+				<label for="password" >
+					Email Address
+				</label>
+				<input id="password"  type="password" placeholder="Enter Password"/>
+				<input type="submit" value="Login"/>
+			</form>	
+		</div>
 	</div>
 </body>
-</html>		
-		
+</html>				
