--- a/homework/arkadi_yengibaryan/html/homework2/index.html
+++ b/homework/arkadi_yengibaryan/html/homework2/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="form-group">
                         <label for="email">Choose your Gmail address</label>
-                        <input type="email" class="form-control" placeholder="@gmail.com" id="email">
+                        <input type="email" class="form-control right_bar_form_email" placeholder="@gmail.com" id="email">
                     </div>
                     <label for="phone">Mobile phone</label>
                     <div class="row right_bar_form_phone">
