--- a/homework/gohar_abrahamyan/html_css/html_secondtask/index.html
+++ b/homework/gohar_abrahamyan/html_css/html_secondtask/index.html
@@ -4,46 +4,55 @@
 	<meta charset="utf-8">
 	<title>Main Page</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div id="main">
+	<div class="container-fluid">
 						<!--This is the text block-->
-		<div id="leftblock" >
-			<h1>
-				Add Gmail to your Google Account
-			</h1>
-			<p>
-				By completing this form, you`re upgrading to Gmail, email from Google, Gmail works on any </br>
-				device, blocks spam, and much more.
-			</p>
-			<p>
-				You`ll be able to sign in using your new Gmail address, which will become the primary email</br>
-				address associated with this account. We`ll send account updates, invitations, end other</br>
-				notifications to your Gmail address.
-			</p>
-			<p>
-				............................................com will become an <a href="#">alternate email address</a> on this account,</br>
-				and you`ll still be able to sign in with it.
-			</p>
-			<p>
-				If you prefer, you can create a <a href="#">new Google Account</a> with email, and leave this one as-is.
-			</p>
-		</div>
+		<div class="row">
+			<div id="leftblock" class="col-xs-12 col-sm-12 col-md-6">
+				<h1 class="header">
+					Add Gmail to your Google Account
+				</h1>
+				<p>
+					By completing this form, you`re upgrading to Gmail, email from Google, Gmail works on any </br>
+					device, blocks spam, and much more.
+					</br></br>
+					You`ll be able to sign in using your new Gmail address, which will become the primary email</br>
+					address associated with this account. We`ll send account updates, invitations, end other</br>
+					notifications to your Gmail address.
+					</br></br>
+					............................................com will become an <a href="#">alternate email address</a> on this account,</br>
+					and you`ll still be able to sign in with it.
+					</br></br>
+					If you prefer, you can create a <a href="#">new Google Account</a> with email, and leave this one as-is.
+				</p>
+			</div>
 							<!--This is the form block-->
-		<div id="rightblock" >
-			<form method="GET">
-				<label for="name">Name</label></br>
-				<input type="text" id="name" />
-				<input type="text" id= "name"/>
-				<label for="mail">Choose your Gmail Address</label></br>
-				<input type="text" id="mail" placeholder="@gmail.com"/>
-				<label for="number" >Mobile phone</label></br>
-				<img src="images/img1.png" />
-				<input type="number" id="number" placeholder="+374"/></br></br>
-				<label for="address" >Your current email address</label></br>
-				<input type="text" id="address" />
-				<input type="submit" value="Submit" />
-			</form>			
+			<div id="rightblock" class="col-xs-10 col-sm-10 col-md-6" >
+				<div class="form">
+				<form method="GET">
+					<label for="name">Name</label></br>
+					<input type="text" id="name" />
+					<input type="text" id= "name"/>
+					<label for="mail">Choose your Gmail Address</label></br>
+					<input type="text" id="mail" placeholder="@gmail.com"/>
+					<label for="number" >Mobile phone</label></br>
+					<select id="country">
+						<option value="Armenia">Armenia +374</option>
+						<option value="Albania">Albania +355</option>
+						<option value="US">US +1</option>
+						<option value="UK">UK +44</option>
+					</select>
+					<input type="text" id="number"/></br>
+					<label for="address" >Your current email address</label></br>
+					<input type="text" id="address" />
+					<input type="submit" value="Submit" />
+				</form>	
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
