--- a/homework/lilit_galstyan/html_css/google_sign_in_page/html/index.html
+++ b/homework/lilit_galstyan/html_css/google_sign_in_page/html/index.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
+
+  
     <title> Signin </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css/style.css">
+    <meta charset="UTF-8">
+                <meta name="keywords" content="HTML,CSS">
 </head>
 <body>
    <div style="display: flex; flex-direction: row; width: 100%;">
-           <div style="color: red; width: 50%"><p class="a"> Add Gmail to your Google Account</p>
-                   <p style="color:#565656; " class="sansserif" >  By completing this form, you're upgrading to Gmail, email from Google.Gmail works on any device, blocks spam, and much more.<br><br>You'll be able to sign in using your new Gmail address, which will become the primary email address associated with this account.We'll sent account updates, invitations, and other notifications to your Gmail address.<br><br> name_n@gmail.com will become an <a  href="#" class="button" >alternate email address</a> on this account, and you'll still be able to sign in with it.<br><br>If you prefer, you can create a<a  href="#" class="button" > new Google Account</a> with email, and leave this one as-is. </p> <br>
+           <div><p class="title"> Add Gmail to your Google Account</p>
+                   <p class="text" >  By completing this form, you're upgrading to Gmail, email from Google.Gmail works on any device, blocks spam, and much more.</p>
+                   <p class="text">You'll be able to sign in using your new Gmail address, which will become the primary email address associated with this account.We'll sent account updates, invitations, and other notifications to your Gmail address.</p><p class="text"> name_n@gmail.com will become an <a  href="#" class="button" >alternate email address</a> on this account, and you'll still be able to sign in with it.</p><p class="text">If you prefer, you can create a<a  href="#" class="button" > new Google Account</a> with email, and leave this one as-is. </p> </p>
      </div>
-     <div id="second" style="color: black">
-             <form style="background-color:rgb(241, 241, 241);">
-                     <label for="fname" class="n">Name</label><br>
-  <input type="text" id="fname" name="fname" placeholder="Name" style="width:167px;" >
-  <input type="text" id="lname" name="lname" placeholder="Surname" style="width:167px;" ><br>
-                     <label for="gmail" class="n">Choose your Gmail address</label><br>
-                     <input  type="text" id="gmail" name="gmail" placeholder="@gmail.com" style="width:345px;"><br>
-                     <label for="phone" class="n">Mobile phone</label><br>
-                     <input type="text" id="phone" name="phone"  style="width:345px;" ><br>
-                     <label for="email" class="n">Your current email address</label><br>
-                     <input type="text" id="email" name="email"  style="width:345px;" ><br>
-  <input type="submit" id="submit" value="Submit" style="background-color: #2378F9; color:white; height: 35px" >
+     <div id="second">
+
+             <form id="datas" >
+                     <label for="fname" class="datas">Name</label><br>
+                     <input type="text" id="name" name="fname" placeholder="Name"  >
+                     <input type="text" id="name" name="lname" placeholder="Surname" ><br>
+                     <label for="gmail" class="datas">Choose your Gmail address</label><br>
+                     <input  type="text" id="mail" name="gmail" placeholder="@gmail.com"><br>
+                     <label for="phone" class="phone" >Mobile phone</label><br>
+                     <input type="text" id="phone" name="phone"  > <br><div>
+                     <label for="email" class="datas">Your current email address</label><br>
+                     <input type="text" id="mail" name="email" ><br>
+                     <input type="submit" id="submit" value="Submit" >
 </form>
      </div>
-   </div>
+</div>
 </body>
 </html>
 
