--- a/homework/nare_mkrtchyan/html/task1/index.html
+++ b/homework/nare_mkrtchyan/html/task1/index.html
@@ -5,22 +5,23 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width", initial=scale=1.0>
 <title>task1</title>
-<link rel="stylesheet" type="text/css" href="task1.css">
+<link rel="stylesheet" type="text/css" href="../../css/task1.css">
 </head>
 <body>
 <div class="main">
-<img src="./logpic.png" alt="username"><br>
-
+<div class="img" style="background:URL("../../images/logpic.png"); padding-bottm:92%; background-repet: no-repet; background size: color">
+<img src="../../images/logpic.png" alt="log">
+</div>
 <form>
-<label for="fname"><b>Username<b></label><br>
+<label for="fname"><b>Username</b></label>
+<div class="i1">
 <input type="text" id="fname" placeholder="Enter Username"><br>
-<br>
-<label for="lname"><b>Password<b></label>
-<br>
-<input type="password" id="lname" placeholder="Enter Password"><br>
-<br>
+</div>
+<label for="lname"><b>Password</b></label>
+<div class="i2">
+<input type="password" id="lname" placeholder="Enter Password">
 <input type="submit" value="Login" class="button">
-
+</div>
 </form>
 </div>
 </body>
