I change files path

--- a/homework/srbuhi-panchoyan/html-css/html/work1-html.html
+++ b/homework/srbuhi-panchoyan/html-css/html/work1-html.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Admin page</title>
-	<link rel="stylesheet" type="text/css" href="/css/work1-html.css">
+	<link rel="stylesheet" type="text/css" href="css/work1-html.css">
 </head>
 <body >
 	<div class="admin1">
-		<img src="/images/image1.png"; >
+		<img src="images/image1.png"; >
 		<div class="admin2">
 			<form>
 				<label for="fname"><b>Username </b></label><br>
