--- a/homework/tatev_martirosyan/html/task-1/index.html
+++ b/homework/tatev_martirosyan/html/task-1/index.html
@@ -2,20 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My first page</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
+<div class="for_border">
     <div class="reg_form">
         <img src="resurse/1.png">
         <form>
-            <p><b>Username</b></p>
-            <p><input type="text" placeholder="Enter username"></p>
-            <p><b>Password</b></p>
-            <p><input type="password" placeholder="Enter password"></p>
-            <p><button class="btn">Login</button></p>
+            <label>Username</label><br>
+            <input type="text" placeholder="Enter username"><br>
+            <label>Password</label><br>
+            <input type="password" placeholder="Enter password"><br>
+            <button class="btn">Login</button>
         </form>
     </div>
+</div>
 
 </body>
 </html>
