--- a/homework/tatev_martirosyan/html/task-1/index.html
+++ b/homework/tatev_martirosyan/html/task-1/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="for_border">
     <div class="reg_form">
-        <img src="resurse/1.png">
+        <img src="resurse/avatar.png" alt="User">
         <form>
             <label>Username</label><br>
             <input type="text" placeholder="Enter username"><br>
