Finished JS homework

--- a/homework/gohar_abrahamyan/JS/firsttask/index.html
+++ b/homework/gohar_abrahamyan/JS/firsttask/index.html
@@ -1,23 +1,37 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html>
 <body>
 
-<p>Let's play the simple victorina game</p>
+<p>Let's play the simple quiz game</p>
 
 <script>
+	const question1 = "Which is the most populous continent?";
+	const question2 = "Which sport is played at Wimbledon?";
+	const question3 = "What is the capital of The United Kingdom?";
 
-	function letsplay() {
+	const answer1 = "asia";
+	const answer2 = "tennis";
+	const answer3 = "london";
+	let pointsum = 0;
 
-  		let answer1 = prompt("Which is the most populous continent?");
-		 if (answer1 != null) {
-			let answer2 = prompt("Which sport is played at Wimbledon?");	
-		 	let answer3 = prompt("What is the capital of The United Kingdom")
+	function letsplay(question, answer) {
+
+  		const result = prompt(question);
+		if (result) {
+			const correctResult = result.toLowerCase().trim();
+			if(correctResult == answer){
+                        	alert(`Correct, you get 1 point`)
+				pointsum++;
+	                }
+
 		 }
 
 	}
-	letsplay();
-	alert("Greate Job!")
-
+	letsplay(question1, answer1);
+	letsplay(question2, answer2);
+	letsplay(question3, answer3);
+	
+	 alert(`Greate Job, You Get ${pointsum} Point`)
 </script>
 
 </body>
