--- a/homework/nare_mkrtchyan/JavaScript/task1.html
+++ b/homework/nare_mkrtchyan/JavaScript/task1.html
@@ -6,34 +6,6 @@
 		<title>Task One</title>
 	</head>
 	<body>
-		<script>
-		function victorina(){
-			let nc='Your answer is not correct!';
-			let c="Your answer is correct";
-			let  longest_river=prompt("Which is the longest river?");
-			if (longest_river!='Amazon')
-				alert(nc);
-			else alert(c);
-			let biggest_country=prompt("Which is the biggest country?");
-			if (biggest_country!='Russia')
-				alert(nc);
-			else alert(c);
-
-			let highest_mountain=prompt("Which is the highest mountain?");
-			if (highest_mountain!=('Everest' || 'Jomolungma'))
-				alert(nc);
-			else alert(c);
-			let WNT=prompt("Who is the current world number three tennis player?")
-				if (WNT!='Dominic Thiem')
-					alert(nc);
-				else alert(c);
-			let ENFTC=prompt(" Who is the captain of England national Football team?");
-			if (ENFTC!='Harry Kane')
-				alert(nc);
-			else alert(c);
-
-			}
-			victorina();
-		</script>
+		<script src="./task1.js"></script>
 	</body>
 </html>
