--- a/homework/lilit_galstyan/html_css/simple_login_page/html/index1.html
+++ b/homework/lilit_galstyan/html_css/simple_login_page/html/index1.html
@@ -9,15 +9,16 @@
 		<meta name="keywords" content="HTML,CSS">
         </head>
 
-        <body>
-                <img src="../resources/image.PNG" alt="image" id="image" > <br><div>
-                <form>
+	<body>   <div id="img">
+			<img src="../resources/image.PNG" alt="image" id="image" ></div> <br><div id="form">
+                <form >
                         <label for"username" id="data" ><b>Username</b></label><br>
-                        <input type="text" id="username" name="username" placeholder="Enter Username" > <br>
+                        <input type="text" class="input" name="username" placeholder="Enter Username" > <br>
                         <label for"password" id="data"><b>Password</b></label><br>
-                        <input type="text" id="password" name="password" placeholder="Enter Password" > <br>
-                        <input type="submit" value="Login" class="button"> <br>
-                        </div>
+                        <input type="text" class="input" name="password" placeholder="Enter Password" > <br>
+                        <input type="submit" value="Login" id="button"> <br>
+                        
+		</div>
                 </form>
         </body>
 
