I add my botstrap file

--- a/homework/srbuhi-panchoyan/html-css/html/work2-html.html
+++ b/homework/srbuhi-panchoyan/html-css/html/work2-html.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Google sign in</title>
-	<link rel="stylesheet" type="text/css" href="/css/work2-html.css">
+	<link rel="stylesheet" type="text/css" href="css/work2-html.css">
 </head>
 <body >
 	<header></header>
