--- a/homework/tatev_martirosyan/html/task-2/index.html
+++ b/homework/tatev_martirosyan/html/task-2/index.html
@@ -18,7 +18,7 @@
             <p>tatev96mar2mail.ru will become an <a href="">alternate email address</a> on this account, and you'll still be anle to sign in with it.</p>
             <p>If you prefer, you can create a <a href="">new Google Account </a> with email, and leave this one as-is.</p>
         </div>
-        <div class="col-xs-4" id="choose_gmail">
+        <div class="col-xs-4">
             <form>
 		<div class="for_marg">
                 <label>Name</label><br>
