--- a/homework/vahram_vanyan/html/task2/index.html
+++ b/homework/vahram_vanyan/html/task2/index.html
@@ -12,14 +12,16 @@
     <div class="flx-contenier">
         <div class="main">
             <h2 class="sansserif_red">Add Gmail to your Google Account</h2>
-            <p class="gmail_post">By completing this form, you're upgrading to Gmail, email from Google. Gmail works on any
-                device, blocks spam, and much more.</p>
-            <p class="gmail_post">You'll be able to sign in using your new Gmail address, which will become the primary email
+            <p class="gmail_post">
+                By completing this form, you're upgrading to Gmail, email from Google. Gmail works on any
+                device, blocks spam, and much more.<br><br>
+                You'll be able to sign in using your new Gmail address, which will become the primary email
                 address associated with this account. We'll send account updates, invitations, and other
-                notifications to your Gmail address.</p>
-            <p class="gmail_post">hhasmik_n@instigatemobile.com will become an <a href="">alternate email address</a>  on this account,
-                and you'l stil be able to sign in with it.</p>
-            <p class="gmail_post">Ifyou prefer, you can create <a href="">a new Google Account</a> with email, and leave this one as-is.</p>
+                notifications to your Gmail address.<br><br>
+                hhasmik_n@instigatemobile.com will become an <a href="">alternate email address</a>  on this account,
+                and you'l stil be able to sign in with. <br><br>
+                Ifyou prefer, you can create <a href="">a new Google Account</a> with email, and leave this one as-is.
+            </p>
         </div>
         <div class="registr">
             <form>
