--- a/homework/Mariam_Am/html/task1/Mariam.html
+++ b/homework/Mariam_Am/html/task1/Mariam.html
@@ -1,121 +1,35 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-<tiile>Add your Gmail Account></title>
-  <style>
-body {
-  body {font-family: Arial, Helvetica, sans-serif;}
-}
-
-    * {box-sizing: border-box;}
-    input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type=submit] {
-  background-color: blue;
-  color: white;
-  padding: 16px 30px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-input[type=submit]:hover {
-  background-color: grey;
-}
-
-.container {
-  border-radius: 5px;
-  background-color: grey;
-  padding: 20px;
-}
-.split {
-    height: 100%;
-    width: 50%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    overflow-x: hidden;
-    padding-top: 20px;
-}
-
-.left {
-    left: 0;
-    background-color: white;
-}
-
-.right {
-    right: 0;
-    background-color: white;
-}
-
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.centered img {
-    width: 150px;
-    border-radius: 50%;
-}
-div {
-  border-radius: 5px;
-background-color: #f2f2f2;
-padding: 20px;
-}
-</style>
-</head>
-<body>
-
-<div1 class="split left">
-  <div1 class="centered">
-    <h2 style="color:red">Add Gmail to your Google Account</h2>
-
-      <p>By completing this form, you're uograding Gmail, email from Google, Gmail works on any,
-        device, blocks spam and much more<br>
-        You'll able to sign in using your new Gmail adress, which will become the primary email
-        adress associated with this account. We'll sent email updates, invitations, and other notifications on your Gmail<br>
-        hasmik_n@instigatemobile.com will become an alternate email adress on this account,
-        sand you'll still be able to sign in with it.<br>
-        If you prefer, you can create a new Google Account with email and leave this one as-is
-      </p>
-  </div1>
-</div1>
-<div class="container">
-
-<div class="split right">
-    <div class="centered">
-      <form action="/action_page.php">
-        <label for="ffname">Name</label>
-      <input type="text" id=fname" name="name" placeholder="Your name..">
-      <input type="text" id="lname" name="surname" placeholder="Your surname..">
-  
-      <label for="Gmail">Choose your Gmail adress</label>
-      <input type="text" id="Gmail" name="Choose your Gmail adress" placeholder=@gmail.com>
-    <label for="Mobile Phone">Mobile Phone</label>
-      <input type="text" id="Mobile Phone" name="Mobile Phone" placeholder=+374></input>
-          <label for="email">Your correct email adress</label>
-              <input type="text" id="email" name="Your correct email adress"></input>
-              <input type="submit" value="Submit">
-
-        </form>
-            </div>
-  </div>
-     </div>s
-</body>
-</html> 
-
-
-
-
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/1.css">
+        <title>Google Account</title>
+    </head>
+    <body>
+        <div class="text">
+            <h1>Add Gmail to your Google Acaount</h1>
+            <p>By completing this form, you're upgrading to Gmail, email from Google. Gmail works on any device, blocks spam, and much more.</p>
+            <p>You'll be able to sign in using your new Gmail address, which will become the primary email address associated with this account. We'll send account updates, invitations, and other notifications to your Gmail address.</p>
+            <p>amirxanyan.mariam.96844519@gmail.com will become an <a href="#">alternate email address</a> on this account, and you'll still be able to sign in with it.</p><p>If you prefer, you can create a <a href="#">new Google Account</a> with email, and leave this one as-is.</p>
+        </div>
+        <div class="form">
+            <form>
+                <label for="name">Name</label><br>
+                <input type="text" id="name" name="name" placeholder="Name">
+                <input type="text" id="lname" name="lname" placeholder="Lastname"><br>
+                <label for="gmail">Choose your Gmail address</label><br>
+                <input type="email" id="gmail" name="gmail" placeholder="@gmail.com"><br>
+                <label for="phone">Mobile phone</label><br>
+                <select id="country">
+                    <option value="Armenia">Arm</option>
+                    <option value="USA">USA</option>
+                    <option value="UK">UK</option>
+                </select>
+                <input type="number" id="phone" name="phone" maxlength="15">
+                <label for="email">Your current email address</label><br>
+                <input type="email" id="email" name="email" placeholder="amirxanyan.mariam.96844519@gmail.com"><br>
+                <button type="submit" id="submit" name="login">Submit</button>
+            </form>
+        </div>
+    </body>
+</html>
