--- a/homework/srbuhi-panchoyan/js/index2.html
+++ b/homework/srbuhi-panchoyan/js/index2.html
@@ -36,11 +36,11 @@
 
 			function answerValidation(a){
 				if (a) {
-					a= a.toLowerCase().trim();
+					return a.toLowerCase().trim();
 				}
 				return false;
 			}
-			consol.log (`Your point is: `,point);		
+			console.log (`Your point is: `,point);		
 		</script>
 	</body>
 </html>
