--- a/homework/Mariam_Am/html/task1/Mariam.html
+++ b/homework/Mariam_Am/html/task1/Mariam.html
@@ -21,9 +21,9 @@
                 <input type="email" id="gmail" name="gmail" placeholder="@gmail.com"><br>
                 <label for="phone">Mobile phone</label><br>
                 <select id="country">
-                    <option value="Armenia">Arm</option>
-                    <option value="USA">USA</option>
-                    <option value="UK">UK</option>
+                    <option value="Armenia">+374</option>
+                    <option value="USA">+255</option>
+                    <option value="UK">+655</option>
                 </select>
                 <input type="number" id="phone" name="phone" maxlength="15">
                 <label for="email">Your current email address</label><br>
