--- a/homework/nare_mkrtchyan/JavaScript/index.html
+++ b/homework/nare_mkrtchyan/JavaScript/index.html
@@ -6,6 +6,6 @@
 		<title>Task One</title>
 	</head>
 	<body>
-		<script src="./task1.js"></script>
+		<script src="./main.js"></script>
 	</body>
 </html>
