--- a/homework/nare_mkrtchyan/JavaScript/Js/index_old.html
+++ b/homework/nare_mkrtchyan/JavaScript/Js/index_old.html
@@ -3,6 +3,22 @@
 	<head>
 		<title>Lesson 1</title>
 		<meta charset='utf-8'>
+		<style>
+			label {
+				margin: 2%;
+				font-size: 120%;
+				color: #070e52;
+			}
+			
+			input {
+				margin-left: 2%;
+				padding: 1%;
+			}
+			#btn {
+				color: white;
+				background-color: #070e52;
+			}
+		</style>
 	</head>
 	<body>
 		<form onsubmit='submitHandler(event)'>
@@ -12,55 +28,55 @@
 			<label for="input2">Email</label><br>
 			<input type="email" id="emailInput" name="email" placeholder="Enter your email" ><br>
 
-			<label onclick="clickEvent(event)" for="input2">Password</label><br>
+			<label for="input2">Password</label><br>
 			<input type="password" id="passwordInput" name="password" placeholder="Enter your password"><br><br>
-			<input type="submit" value="Submit" >
+			<input type="submit" id="btn" value="Submit" >
 		</form>
 		<script>
-			const users = [];
+
 			function goToVictorinaPage() {
 				location.replace('./index.html');
 			}
 
-			function clickEvent(event) {	
-				event.preventDefault();
-				console.log('this is a click event', event);
-			}
+	//		let btn = document.getElementById('btn');
+	//		btn.onclick = goToVictorinaPage;
 
 			function validation() {
-				const name = document.getElementById('nameInput').value;
-				const email = document.getElementById('emailInput').value;
-				const password = document.getElementById('passwordInput').value;
+				const name = document.getElementById('nameInput').value.trim();
+				const email = document.getElementById('emailInput').value.trim();
+				const password = document.getElementById('passwordInput').value.trim();
 				if (name && email && password) {
 					addUser(name, email, password);
 				} else {
-					alert('Please enter all fields');
+					alert( 'Please enter all fields');
 					return;
 				}
 				
 			}
-		
+
 			function addUser(n, e, p) {
 				const user = {
 					name: n,
 					email: e,
 					password: p
 				};
-				users.push(user);
-				const userData = user.name+'userdata';
-				localStorage.setItem(userData, JSON.stringify(users));
+			//	users.push(user);
+				if(!localStorage.getItem(n)){
+					localStorage.setItem(n, JSON.stringify(user));
+				} else {
+					alert(" Please enter another name!");
+					return;
+				}
 				sayHello(n);
 			}
 
 			function sayHello(n) {
 				alert(`user ${n} is added`);
 				goToVictorinaPage();
-			//	location.replace('https://google.com');
 			}
 			
 			function submitHandler(event) {
 				event.preventDefault();
-				//console.log(event.target.value);
 				validation();
 			}
 			
