--- a/homework/anna_mayilyan/javascript/index1.html
+++ b/homework/anna_mayilyan/javascript/index1.html
@@ -14,7 +14,7 @@
 			}
 			.formElem > p {
 				text-align: center; 
-				background: silver;
+				background: #b3e0ff;
 				padding: 10px;
 				max-width: 500px;
 			}
@@ -35,6 +35,20 @@
 				border-radius: 20px;
 				display: none;
 			}
+
+
+
+
+input[type=submit] {
+  width: 20%;
+  background-color: #33adff;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 		</style>
 	</head>
 	<body>
