--- a/homework/anna_mayilyan/javascript/login.html
+++ b/homework/anna_mayilyan/javascript/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Registration</title>
 		<meta charset='utf-8'>
-		<link rel="stylesheet" href="login.css">
+		<link rel="stylesheet" href="login1.css">
 	</head>
 	<body>
 
@@ -22,7 +22,7 @@
 			<input type="submit" value="Submit">
 		</form>
 		<script>
-			const users = [];
+		const users = [];	
 			
 			function clickEvent(event) {
 				event.preventDefault();
