--- a/homework/Narek_Iskandaryan/Javascript/task_3/index.html
+++ b/homework/Narek_Iskandaryan/Javascript/task_3/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 	<head>
-		<title>Lesson 1</title>
+		<title>Victorina game</title>
 		<meta charset='utf-8'>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/css_index.css">
