Changed css file

--- a/homework/nare_mkrtchyan/JavaScript/task1.1/html/index_old.html
+++ b/homework/nare_mkrtchyan/JavaScript/task1.1/html/index_old.html
@@ -7,9 +7,8 @@
 		<link rel = "stylesheet" href = "../css/regvic.css" >
 	</head>
 	<body>
-		<div class="row">
-		<div class ="column"><p></p></div>
-		<div class="column">
+		<div class="reg">
+		<div>
 		<form onsubmit='submitHandler(event)'>
 			<h2>Registration</h2>
 			<label for="input1">Name</label><br>
@@ -23,7 +22,6 @@
 			<input type="submit" id="btn" value="Submit" >
 		</form>
 		</div>
-		<div class ="column"><p></p></div>
 		</div>
 		<script>
 
@@ -71,6 +69,5 @@
 			}
 			
 		</script>
-		
 	</body>
 </html>
