--- a/homework/tatev_martirosyan/js/homework_js/task_4.html
+++ b/homework/tatev_martirosyan/js/homework_js/task_4.html
@@ -1,5 +1,14 @@
-<!Doctype html>                                 <html>                                                  <head>
-                <title>JS homework</title>                      <meta charset='utf-8'>                  </head>                                         <body>                                          <script>
+<!Doctype html>
+
+<html> 
+
+	<head>
+
+        	 <title>JS homework</title>
+		<meta charset='utf-8'>
+	</head> 
+	<body>
+		<script>
                 let str="red blue green silver red green green";
 		let a=str.split(" ");
 		console.log(a);
@@ -16,8 +25,7 @@
 				let qanak=0;
 				for(let i=index; i< arr.length; i++)
 				{
-					if(arr[i]===value)
-											qanak++;
+					if(arr[i]===value) qanak++;
 				}
 				if(maxCount<=qanak)
 				{
